--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,81 @@ nav {
     font-size: 18px;
     color: #424242;
 }
+
+.nav-right>ul>li {
+    /* background: #FF900E; */
+    border: 1px solid rgba(223, 208, 208, 0);
+    padding: 10px;
+    position: relative;
+    border-radius: 5px;
+    transition: background .3s ease;
+}
+
+.nav-right>ul>li:hover {
+    background: #FF900E;
+    border: 1px solid rgb(223, 208, 208);
+    padding: 10px;
+    position: relative;
+    border-radius: 5px;
+}
+
+
+/* .header-text {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.header-text {
+    max-width: 862px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.header-title {
+    text-align: center;
+    font-size: 64px;
+    font-weight: bold;
+}
+
+.header-section {
+    /* max-width: 862px; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.header-sub-texts {
+    text-align: center;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+button {
+    /* text-align: right; */
+    font-size: 20px;
+    font-weight: bold;
+    height: 64px;
+    width: 160px;
+    background-color: #FF900E;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    transition: background .3s ease;
+}
+
+.header-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button:hover {
+    background: #ac6617;
+    transform: scale(1.)
+}
