--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ button:hover {
     display: flex;
     justify-content: space-between;
     padding: 2rem;
+    gap: 73px;
 }
 
 .quicklist-photos {
@@ -160,11 +161,6 @@ button:hover {
     justify-content: flex-end;
     flex: 1;
     /* background: green */
-}
-
-.quicklist-texts {
-    flex: 1;
-    /* background: pink; */
 }
 
 .one {
@@ -185,14 +181,39 @@ button:hover {
 
 .feature-images {
     background-size: 100% 100%;
-    height: 342px;
-    width: 342px;
+    height: 250px;
+    width: 250px;
 }
 
 .feature-images-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
+}
+
+.quick-list-texts {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.quick-list-texts>.text {
+    font-size: var(--text-sm);
+    line-height: var(--line-height);
+    ;
+}
+
+.button {
+    font-size: 20px;
+    font-weight: bold;
+    height: 64px;
+    width: 160px;
+    background-color: #FF900E;
+    text-align: center;
+    border: none;
+    color: white;
+    border-radius: 5px
 }
 
 
