--- a/styles.css
+++ b/styles.css
@@ -362,6 +362,12 @@ button:hover {
     border-radius: 8px;
     padding: 15px;
     width: 241px;
+    transition: transform .3s ease, background .3s ease;
+}
+
+.section:hover {
+    background: var(--background);
+    transform: scale(1.1);
 }
 
 .section-header {
