--- a/styles.css
+++ b/styles.css
@@ -304,6 +304,7 @@ button:hover {
     border-left: 5px solid #FF900E;
     font-size: var(--text-title);
     font-weight: bold;
+    padding-left: 15px;
 }
 
 .feature-title>span {
