--- a/styles.css
+++ b/styles.css
@@ -455,7 +455,7 @@ button:hover {
 /* Footer styles */
 
 .footer {
-    width: 100%;
+    /* width: 100%; */
     background: var(--background);
     text-align: center;
     padding: 15px;
@@ -466,7 +466,7 @@ button:hover {
 
 footer {
     padding-top: 130px;
-    padding-bottom: 216px;
+    padding-bottom: 100px;
 }
 
 
